# AI-Projects

./: .gitignore  README.md
BanksDepositRates/: .gitignore  Dockerfile  README.md  banks_dag.py  docker-compose.yaml  pyproject.toml
BanksDepositRates/data_scraper/: constants.py  main.py
BanksDepositRates/notebooks/: data_getting_sravni.ipynb  experement.ipynb  postgres_injestion.ipynb  project_notes.txt  send_img_table.ipynb  tg_bot.ipynb
BanksDepositRates/telegram_bot/: bot.py  constants.py  db.py  utils.py
Clients_Credit_Prediction/notebooks/: Baseline.ipynb  Log_Reg_Solution.ipynb  Untitled.ipynb
Demand_Forecasting/: Dockerfile  README.md  app.py  get_models.py  model_experiments.ipynb  preprocessing.py  requirements.txt
Employe_Raise_Prediction/: solution.ipynb
Machine_Learning/ENG/TLC_NY_Trip_Demand_Prediction/: README.md
Machine_Learning/ENG/TeleCom_Churn_Prediction/: Churn_Project_P2_Ideas.ipynb  Churn_Project_P5_Summary.ipynb  README.md
Machine_Learning/RUS/TLC_NY_Trip_Demand_Prediction/: README.md
Machine_Learning/RUS/TeleCom_Churn_Prediction/: Churn_Project_P1_Initial_EDA.ipynb  README.md  (+4 more)
Sentiment_Analysis/: week_1_2.ipynb
Sentiment_Analysis/kaggle_in_class/: SimpleSentiment_Kaggle_in_Class.ipynb
TLC_NY_Trip_Demand_Prediction/: README.md
TLC_NY_Trip_Demand_Prediction/notebooks/: 1_Preprocessing.ipynb  3_BaseLine_Model.ipynb
TLC_NY_Trip_Demand_Prediction/src/: features.py  metrics.py
TeleCom_Churn_Prediction/: Churn_Project_P1_Initial_EDA.ipynb  Churn_Project_P3_Baseline.ipynb  Churn_Project_P4_Model_Experiments.ipynb  README.md
(+23 files in other folders)
